添加框架导出，添加计量，修复保养和维修产生的bug

--- a/application/index/view/administrators/admin-info.html
+++ b/application/index/view/administrators/admin-info.html
@@ -14,6 +14,7 @@
     </div>
     <div class="x-body">
       <xblock>
+        <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
         <button class="layui-btn" onclick="x_admin_show('添加管理员','{:url(\'index/Administrators/adminAdd\')}',500,400)"><i class="layui-icon"></i>添加</button>
         </xblock>
       <div class="container-wrap">
