--- a/application/index/view/assembly/assembly-info.html
+++ b/application/index/view/assembly/assembly-info.html
@@ -13,6 +13,8 @@
     <div class="x-body">
       <xblock>
         <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>删除</button>-->
+        <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
+
         <button class="layui-btn" onclick="x_admin_show('添加组件图纸','{:url(\'index/Assembly/assemblyAdd\')}',500,500)"><i class="layui-icon"></i>添加组件图纸</button>
         <div class="layui-input-inline">
           <form class="layui-form" action="{:url('index/Assembly/assemblyInfo')}" method="post">
