--- a/application/index/view/blueprint/process-copy.html
+++ b/application/index/view/blueprint/process-copy.html
@@ -2,6 +2,8 @@
 <body>
 
 <div class="x-body">
+    <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
+
     <form  class="layui-form">
         <div class="layui-form-item">
             <label for="" class="layui-form-label" style="width: 120px;">选择图纸明细编号</label>
