--- a/application/index/view/cost_type/cost-info.html
+++ b/application/index/view/cost_type/cost-info.html
@@ -6,7 +6,10 @@
     <legend>消费类型</legend>
   </fieldset>
   <xblock>
+    <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
+
     <button class="layui-btn" onclick="x_admin_show('添加消费类型','{:url(\'index/CostType/costAdd\')}',500,500)"><i class="layui-icon"></i>添加</button>
+
   </xblock>
   <div class="layui-row">
     <div class="container-wrap">
