--- a/application/index/view/duties/duties-info.html
+++ b/application/index/view/duties/duties-info.html
@@ -5,6 +5,8 @@
     <legend>职务管理</legend>
   </fieldset>
   <xblock>
+    <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
+
     <button class="layui-btn" onclick="x_admin_show('添加职务','{:url(\'index/Duties/DutiesAdd\')}',500,400)"><i class="layui-icon"></i>添加</button>
   </xblock>
   <div class="layui-row">
