--- a/application/index/view/equipment/equipmentInfo.html
+++ b/application/index/view/equipment/equipmentInfo.html
@@ -13,6 +13,7 @@
 </div>
 <div class="x-body">
     <xblock>
+        <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
         <button class="layui-btn" onclick="x_admin_show('添加设备','{:url(\'index/Equipment/addEquipmentInfo\')}')"><i class="layui-icon"></i>添加设备</button>
         <button class="layui-btn"  onclick="openLinke()">维修保养记录</button>
         <div class="layui-input-inline">
