--- a/application/index/view/storehouse/delivery.html
+++ b/application/index/view/storehouse/delivery.html
@@ -12,6 +12,8 @@
       </a>
     </div>
     <div class="x-body">
+      <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
+
       <div class="layui-row">
         <form class="layui-form layui-col-md12 x-so">
           <input type="text" name="username"  placeholder="请输入订单号" autocomplete="off" class="layui-input">
