--- a/application/index/view/client/client-info.html
+++ b/application/index/view/client/client-info.html
@@ -14,9 +14,9 @@
     </div>
     <div class="x-body">
       <xblock>
+        <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
         <button class="layui-btn" onclick="x_admin_show('添加客户','{:url(\'index/Client/clientAdd\')}',500,550)"><i class="layui-icon"></i>添加</button>
         <!--<span class="x-right" style="line-height:40px">共有数据：88 条</span>-->
-
       </xblock>
       <div class="container-wrap">
         <div class="box-1">
