--- a/application/index/view/department/department-info.html
+++ b/application/index/view/department/department-info.html
@@ -6,6 +6,8 @@
     <legend>部门管理</legend>
   </fieldset>
   <xblock>
+    <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
+
     <button class="layui-btn" onclick="x_admin_show('添加部门','{:url(\'index/Department/departmentAdd\')}',500,400)"><i class="layui-icon"></i>添加</button>
   </xblock>
   <div class="layui-row">
