--- a/application/index/view/equipment/equipmentTypeInfo.html
+++ b/application/index/view/equipment/equipmentTypeInfo.html
@@ -13,6 +13,7 @@
 </div>
 <div class="x-body">
     <xblock>
+        <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
         <button class="layui-btn" onclick="x_admin_show('添加类型','{:url(\'index/Equipment/addEquipmentType\')}',450,200)"><i class="layui-icon"></i>添加类型</button>
         <span class="x-right" style="line-height:40px">共{$equipmentTypeCount}条 · 共{$equipmentTypeCount/25|getInt}页</span>
     </xblock>
