--- a/application/index/view/equipment_maintain/allMaintainInfo.html
+++ b/application/index/view/equipment_maintain/allMaintainInfo.html
@@ -11,6 +11,8 @@
 </div>
 <div class="x-body">
     <xblock>
+        <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
+
         <div class="layui-input-inline">
             <form class="layui-form" action="{:url('index/EquipmentMaintain/allMaintainInfo')}" method="post">
                 <div class="layui-input-inline">
