--- a/application/index/view/internal/internal-info.html
+++ b/application/index/view/internal/internal-info.html
@@ -14,6 +14,8 @@
 <div class="x-body">
 
     <xblock>
+        <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
+
         <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>-->
         <button class="layui-btn" onclick="x_admin_show('添加内图','{:url(\'index/Internal/internalAdd\')}',400,400)"><i class="layui-icon"></i>添加</button>
         <div class="layui-input-inline">
