--- a/application/index/view/material/material.html
+++ b/application/index/view/material/material.html
@@ -12,6 +12,8 @@
     </div>
     <div class="x-body">
       <xblock>
+        <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
+
         <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
         <button class="layui-btn" onclick="x_admin_show('添加材料','{:url(\'index/Material/materialAdd\')}',500,400)"><i class="layui-icon"></i>添加</button>
         <!--<span class="x-right" style="line-height:40px">共有数据：88 条</span>-->
