--- a/application/index/view/order/order.html
+++ b/application/index/view/order/order.html
@@ -12,6 +12,8 @@
     </div>
     <div class="x-body">
         <xblock>
+          <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
+
           <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>-->
           <button class="layui-btn" onclick="x_admin_show('添加订单','{:url(\'index/Order/addOrder\')}',600,600)"><i class="layui-icon"></i>添加</button>
           <div class="layui-input-inline">
