--- a/application/index/view/section/section.html
+++ b/application/index/view/section/section.html
@@ -12,6 +12,8 @@
     </div>
     <div class="x-body">
       <xblock>
+        <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
+
         <button class="layui-btn" onclick="x_admin_show('添加横截','{:url(\'index/Section/sectionAdd\')}',700,400)"><i class="layui-icon"></i>添加</button>
         <!--<span class="x-right" style="line-height:40px">共有数据：88 条</span>-->
       </xblock>
