--- a/application/index/view/order/order-detail-info.html
+++ b/application/index/view/order/order-detail-info.html
@@ -90,6 +90,7 @@
               <th>交货日期</th>
               <th>是否完成</th>
               <th>入库数量</th>
+              <th>所属内外图</th>
               <th>创建人</th>
               <th>创建时间</th>
             </tr>
@@ -111,6 +112,16 @@
                 <td>{$info.date_delivery}</td>
                 <td>{$info.if_complete}</td>
                 <td>{$info.warehousing}</td>
+                <?php
+                  $count = getCountExterna($info['drawing_externa_or_internal_id']);
+                ?>
+                <td>
+                  {if $count }
+                  {$info.drawing_externa_or_internal_id|getExternaCode}   <span style="color: red">新</span>
+                  {else}
+                  {$info.drawing_externa_or_internal_id|getExternaCode}
+                  {/if}
+                </td>
                 <td>{$info.create_name}</td>
                 <td>{$info.create_time}</td>
               </tr>
