--- a/application/index/view/order/order.html
+++ b/application/index/view/order/order.html
@@ -64,8 +64,8 @@
               <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
             </td>
             <td class="td-manage">
-              <a title="修改" onclick="x_admin_show('修改订单','{:url(\'index/Order/editOrder\',[\'id\'=>$info.id])}',600,600)", href="javascript:;"><i style="color: green" class="layui-icon"></i></a>
-              <a title="删除" onclick="delete_(this,'')" href="javascript:void(0);" ><i  style="color:red;" class="layui-icon"></i></a>
+              <a title="修改" onclick="x_admin_show('修改订单明细','{:url(\'index/Order/editOrder\',[\'id\'=>$info.id])}',600,600)", href="javascript:;"><i style="color: green" class="layui-icon"></i></a>
+              <a title="删除" onclick="delete_(this,'{$info.id}')" href="javascript:void(0);" ><i  style="color:red;" class="layui-icon"></i></a>
             </td>
             <td>  <a title="订单明细" onclick="x_admin_show('<span class=\' layui-bg-blue\'>{$info.order_id}</span> 订单明细','{:url(\'index/Order/orderDetail\',[\'id\'=>$info.id])}')", href="javascript:;"> {$info.order_id} </a></td>
             <td>{$info.order_content}</td>
@@ -112,37 +112,22 @@
 
     </div>
     <script>
-      layui.use('laydate', function(){
-        var laydate = layui.laydate;
-        //执行一个laydate实例
-        laydate.render({
-          elem: '#start' //指定元素
-        });
+        /*删除*/
+        function delete_(obj,id){
+            layer.confirm('确认要删除吗？',function(index){
+                var url = "{:url('/index/Order/orderDelete')}";
+                var postData ={"id":id};
+                $.post(url,postData,function (result) {
+                    if(result === 1 ){
+                        $(obj).parents("tr").remove();
+                        layer.msg('已删除!',{icon:1,time:1000});
+                    }else {
+                        layer.alert("删除失败", {icon: 5});
+                    }
+                },"json");
+            });
+        }
 
-        //执行一个laydate实例
-        laydate.render({
-          elem: '#end' //指定元素
-        });
-      });
-
-      /*用户-删除*/
-      function member_del(obj,id){
-          layer.confirm('确认要删除吗？',function(index){
-              //发异步删除数据
-              $(obj).parents("tr").remove();
-              layer.msg('已删除!',{icon:1,time:1000});
-          });
-      }
-
-      function delAll (argument) {
-        var data = tableCheck.getData();
-  
-        layer.confirm('确认要删除吗？'+data,function(index){
-            //捉到所有被选中的，发异步进行删除
-            layer.msg('删除成功', {icon: 1});
-            $(".layui-form-checked").not('.header').parents('tr').remove();
-        });
-      }
     </script>
   </body>
 </html>
