--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -274,6 +274,12 @@
                             <cite>订单列表</cite>
                         </a>
                     </li >
+                    <li>
+                        <a _href="{:url('index/quoted/quotedInfo')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>报价列表</cite>
+                        </a>
+                    </li >
                 </ul>
             </li>
             {/if}
